Put in the remainder of the content for col-8 in the main section of the body and finished structuring it.

--- a/html/codeup-design.html
+++ b/html/codeup-design.html
@@ -10,7 +10,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light">
-    <img class="logo-img" src="../assets/logo.png">
+    <img class="logo-img" src="/assets/logo.png">
     <a class="navbar-brand" href="#">codeup design</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -45,33 +45,60 @@
             <button class="button button3">SUPPORT</button>
             <button class="button button4">HOST</button>
         </div>
-        <hr>
     </div>
 </header>
+
+<br>
+<hr>
+<br>
 
 <main>
     <div class="container">
         <div class="row">
             <div class="col-8">
                 <div class="column">SELECTED WORK</div>
-                <div class="col-6">
-                    <span><img src="../assets/apple-ipad.jpg" alt="apple-ipad" class="col-img"></span>
-                    <div class="row">
-                        <span class="featured-text">FEATURED PROJECT</span>
-                        <button class="button-sm b1">D</button>
-                        <button class="button-sm b2">D</button>
-                        <button class="button-sm b3">S</button>
-                        <button class="button-sm b4">H</button>
+                <div class="row">
+                    <div class="col-6">
+                        <span><img src="/assets/apple-ipad.jpg" alt="apple-ipad" class="col-img"></span>
+                        <div class="row">
+                            <span class="featured-text">FEATURED PROJECT</span>
+                            <button class="button-sm b1">D</button>
+                            <button class="button-sm b2">D</button>
+                            <button class="button-sm b3">S</button>
+                            <button class="button-sm b4">H</button>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <span><img src="/assets/macbook.jpg" alt="macbook" class="col-img"></span>
+                        <div class="row">
+                            <span class="featured-text">FEATURED PROJECT</span>
+                            <button class="button-sm b1">D</button>
+                            <button class="button-sm b2">D</button>
+                            <button class="button-sm b3">S</button>
+                            <button class="button-sm b4">H</button>
+                        </div>
                     </div>
                 </div>
-                <div class="col-6">
-                    <span><img src="../assets/man.jpg" alt="man" class="col-img"></span>
-                    <div class="row">
-                        <span class="featured-text">FEATURED PROJECT</span>
-                        <button class="button-sm b1">D</button>
-                        <button class="button-sm b2">D</button>
-                        <button class="button-sm b3">S</button>
-                        <button class="button-sm b4">H</button>
+                <div class="row">
+                    <div class="col-6">
+                        <span><img src="/assets/man.jpg" alt="man" class="col-img"></span>
+                        <div class="row">
+                            <span class="featured-text">FEATURED PROJECT</span>
+                            <button class="button-sm b1">D</button>
+                            <button class="button-sm b2">D</button>
+                            <button class="button-sm b3">S</button>
+                            <button class="button-sm b4">H</button>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <span><img src="/assets/security.jpg" alt="security" class="col-img"></span>
+                        <div class="row">
+                            <span class="featured-text">FEATURED PROJECT</span>
+                            <button class="button-sm b1">D</button>
+                            <button class="button-sm b2">D</button>
+                            <button class="button-sm b3">S</button>
+                            <button class="button-sm b4">H</button>
+                        </div>
                     </div>
                 </div>
             </div>
