Structuring col-4 HTML & CSS.

--- a/html/codeup-design.html
+++ b/html/codeup-design.html
@@ -104,6 +104,14 @@
             </div>
             <div class="col-4">
                 <div class="column">THE LAST</div>
+                <div class="row">
+                    <div class="col">
+                        <img src="/img/"
+                    </div>
+                    <div class="col">
+                        THE ADMIN BAR AND ABSOLUTE POSITIONING
+                    </div>
+                </div>
             </div>
         </div>
     </div>
