--- a/html/codeup-design.html
+++ b/html/codeup-design.html
@@ -48,9 +48,7 @@
     </div>
 </header>
 
-<br>
 <hr>
-<br>
 
 <main>
     <div class="container">
@@ -104,12 +102,33 @@
             </div>
             <div class="col-4">
                 <div class="column">THE LAST</div>
-                <div class="row">
-                    <div class="col">
-                        <img src="/img/"
+                <div class="the-last-row row">
+                    <div class="col-5">
+                        <img src="../assets/mobile-phone.jpg" class="image-sm" alt="mobile phone">
                     </div>
-                    <div class="col">
-                        THE ADMIN BAR AND ABSOLUTE POSITIONING
+                    <div class="col-7">
+                        <span class="text">THE ADMIN BAR AND ABSOLUTE POSITIONING</span>
+                    </div>
+                </div>
+                <div class="the-last-row row">
+                    <div class="col-5">
+                        <img src="../assets/head.jpg" class="image-sm" alt="head">
+                    </div>
+                    <div class="col-7">
+                        <span class="text">NIBBLER AWESOME WEBSITE TESTING</span>
+                    </div>
+                </div>
+                <div class="the-last-row row">
+                    <div class="col-5">
+                        <img src="../assets/ipad.jpg" class="image-sm" alt="ipad">
+                    </div>
+                    <div class="col-7">
+                        <span class="text">HOW TO GET GOOGLE TO LIKE YOU</span>
+                    </div>
+                </div>
+                <div class="the-last-row row">
+                    <div class="col-5">
+                        <div>LAST TWEET</div>
                     </div>
                 </div>
             </div>
