Completed extra large screen layout.

--- a/html/codeup-design.html
+++ b/html/codeup-design.html
@@ -45,90 +45,112 @@
             <button class="button button3">SUPPORT</button>
             <button class="button button4">HOST</button>
         </div>
+        <hr>
     </div>
 </header>
-
-<hr>
 
 <main>
     <div class="container">
         <div class="row">
             <div class="col-8">
                 <div class="column">SELECTED WORK</div>
-                <div class="row">
+                <br>
+                <div class="container row">
                     <div class="col-6">
-                        <span><img src="/assets/apple-ipad.jpg" alt="apple-ipad" class="col-img"></span>
+                        <div><img src="/assets/apple-ipad.jpg" alt="apple-ipad" class="col-img"></div>
                         <div class="row">
-                            <span class="featured-text">FEATURED PROJECT</span>
-                            <button class="button-sm b1">D</button>
-                            <button class="button-sm b2">D</button>
-                            <button class="button-sm b3">S</button>
-                            <button class="button-sm b4">H</button>
+                            <div class="col">
+                                <div class="featured-text">FEATURED PROJECT</div>
+                            </div>
+                            <div class="btn-sm-row col row">
+                                <button class="button-sm b1">D</button>
+                                <button class="button-sm b2">D</button>
+                                <button class="button-sm b3">S</button>
+                                <button class="button-sm b4">H</button>
+                            </div>
                         </div>
                     </div>
                     <div class="col-6">
-                        <span><img src="/assets/macbook.jpg" alt="macbook" class="col-img"></span>
+                        <div><img src="/assets/macbook.jpg" alt="macbook" class="col-img"></div>
                         <div class="row">
-                            <span class="featured-text">FEATURED PROJECT</span>
-                            <button class="button-sm b1">D</button>
-                            <button class="button-sm b2">D</button>
-                            <button class="button-sm b3">S</button>
-                            <button class="button-sm b4">H</button>
+                            <div class="col">
+                                <div class="featured-text">FEATURED PROJECT</div>
+                            </div>
+                            <div class="btn-sm-row col row">
+                                <button class="button-sm b1">D</button>
+                                <button class="button-sm b2">D</button>
+                                <button class="button-sm b3">S</button>
+                                <button class="button-sm b4">H</button>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <br>
+                <div class="container row">
                     <div class="col-6">
-                        <span><img src="/assets/man.jpg" alt="man" class="col-img"></span>
+                        <div><img src="/assets/man.jpg" alt="man" class="col-img"></div>
                         <div class="row">
-                            <span class="featured-text">FEATURED PROJECT</span>
-                            <button class="button-sm b1">D</button>
-                            <button class="button-sm b2">D</button>
-                            <button class="button-sm b3">S</button>
-                            <button class="button-sm b4">H</button>
+                            <div class="col">
+                                <div class="featured-text">FEATURED PROJECT</div>
+                            </div>
+                            <div class="btn-sm-row col row">
+                                <button class="button-sm b1">D</button>
+                                <button class="button-sm b2">D</button>
+                                <button class="button-sm b3">S</button>
+                                <button class="button-sm b4">H</button>
+                            </div>
                         </div>
                     </div>
                     <div class="col-6">
-                        <span><img src="/assets/security.jpg" alt="security" class="col-img"></span>
+                        <div><img src="/assets/security.jpg" alt="security" class="col-img"></div>
                         <div class="row">
-                            <span class="featured-text">FEATURED PROJECT</span>
-                            <button class="button-sm b1">D</button>
-                            <button class="button-sm b2">D</button>
-                            <button class="button-sm b3">S</button>
-                            <button class="button-sm b4">H</button>
+                            <div class="col">
+                                <div class="featured-text">FEATURED PROJECT</div>
+                            </div>
+                            <div class="btn-sm-row col row">
+                                <button class="button-sm b1">D</button>
+                                <button class="button-sm b2">D</button>
+                                <button class="button-sm b3">S</button>
+                                <button class="button-sm b4">H</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="column">THE LAST</div>
-                <div class="the-last-row row">
+                <br>
+                <div class="row">
                     <div class="col-5">
                         <img src="../assets/mobile-phone.jpg" class="image-sm" alt="mobile phone">
                     </div>
                     <div class="col-7">
-                        <span class="text">THE ADMIN BAR AND ABSOLUTE POSITIONING</span>
+                        <div class="text">THE ADMIN BAR AND ABSOLUTE POSITIONING</div>
                     </div>
                 </div>
-                <div class="the-last-row row">
+                <br>
+                <div class="row">
                     <div class="col-5">
                         <img src="../assets/head.jpg" class="image-sm" alt="head">
                     </div>
                     <div class="col-7">
-                        <span class="text">NIBBLER AWESOME WEBSITE TESTING</span>
+                        <div class="text">NIBBLER AWESOME WEBSITE TESTING</div>
                     </div>
                 </div>
-                <div class="the-last-row row">
+                <br>
+                <div class="row">
                     <div class="col-5">
                         <img src="../assets/ipad.jpg" class="image-sm" alt="ipad">
                     </div>
                     <div class="col-7">
-                        <span class="text">HOW TO GET GOOGLE TO LIKE YOU</span>
+                        <div class="text">HOW TO GET GOOGLE TO LIKE YOU</div>
                     </div>
                 </div>
-                <div class="the-last-row row">
-                    <div class="col-5">
+                <br>
+                <div class="row">
+                    <div class="col-12">
                         <div>LAST TWEET</div>
+                        <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur illum praesentium voluptatem. Harum id nemo neque non perspiciatis quis sit voluptatem. Cupiditate dicta facere necessitatibus.</div>
                     </div>
                 </div>
             </div>
