--- a/html/codeup-design.html
+++ b/html/codeup-design.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Design Project</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton|Abel">
@@ -40,10 +41,14 @@
         </div>
         <br>
         <div class="row button-row">
-            <button class="button button1">DESIGN</button>
-            <button class="button button2">DEVELOP</button>
-            <button class="button button3">SUPPORT</button>
-            <button class="button button4">HOST</button>
+            <div class="btn-top row">
+                <button class="button button1">DESIGN</button>
+                <button class="button button2">DEVELOP</button>
+            </div>
+            <div class="btn-btm row">
+                <button class="button button3">SUPPORT</button>
+                <button class="button button4">HOST</button>
+            </div>
         </div>
         <hr>
     </div>
@@ -52,11 +57,11 @@
 <main>
     <div class="container">
         <div class="row">
-            <div class="col-8">
+            <div class="col-xl-8 col-md-12">
                 <div class="column">SELECTED WORK</div>
                 <br>
                 <div class="container row">
-                    <div class="col-6">
+                    <div class="col-lg-6 col-md-6 col-sm-12">
                         <div><img src="/assets/apple-ipad.jpg" alt="apple-ipad" class="col-img"></div>
                         <div class="row">
                             <div class="col">
@@ -70,7 +75,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-lg-6 col-md-6 col-sm-12">
                         <div><img src="/assets/macbook.jpg" alt="macbook" class="col-img"></div>
                         <div class="row">
                             <div class="col">
@@ -87,7 +92,7 @@
                 </div>
                 <br>
                 <div class="container row">
-                    <div class="col-6">
+                    <div class="col-lg-6 col-md-6 col-sm-12">
                         <div><img src="/assets/man.jpg" alt="man" class="col-img"></div>
                         <div class="row">
                             <div class="col">
@@ -101,7 +106,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-lg-6 col-md-6 col-sm-12">
                         <div><img src="/assets/security.jpg" alt="security" class="col-img"></div>
                         <div class="row">
                             <div class="col">
@@ -117,32 +122,32 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="d-none d-xl-block col-4">
                 <div class="column">THE LAST</div>
                 <br>
                 <div class="row">
-                    <div class="col-5">
-                        <img src="../assets/mobile-phone.jpg" class="image-sm" alt="mobile phone">
+                    <div class="col-4">
+                        <img src="/assets/mobile-phone.jpg" class="image-sm" alt="mobile phone">
                     </div>
-                    <div class="col-7">
+                    <div class="col-8">
                         <div class="text">THE ADMIN BAR AND ABSOLUTE POSITIONING</div>
                     </div>
                 </div>
                 <br>
                 <div class="row">
-                    <div class="col-5">
-                        <img src="../assets/head.jpg" class="image-sm" alt="head">
+                    <div class="col-4">
+                        <img src="/assets/head.jpg" class="image-sm" alt="head">
                     </div>
-                    <div class="col-7">
+                    <div class="col-8">
                         <div class="text">NIBBLER AWESOME WEBSITE TESTING</div>
                     </div>
                 </div>
                 <br>
                 <div class="row">
-                    <div class="col-5">
-                        <img src="../assets/ipad.jpg" class="image-sm" alt="ipad">
+                    <div class="col-4">
+                        <img src="/assets/ipad.jpg" class="image-sm" alt="ipad">
                     </div>
-                    <div class="col-7">
+                    <div class="col-8">
                         <div class="text">HOW TO GET GOOGLE TO LIKE YOU</div>
                     </div>
                 </div>
@@ -161,4 +166,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <!--Custom JS Goes Here-->
 </body>
+
+<footer>
+
+</footer>
+
 </html>
