--- a/html/bootstrap-grid-tblock-resume.html
+++ b/html/bootstrap-grid-tblock-resume.html
@@ -51,7 +51,7 @@
 <main>
     <div class="container">
         <div class="row">
-            <div class="col-4">
+            <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
                 <div class="row">
                     <h4>SKILLS AND ABILITIES</h4>
                 </div>
@@ -66,8 +66,8 @@
                 <br>
                 <div class="row">
                     <h4>ACADEMIC</h4>
-                    <div>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit, sed do eiusmod tempor<br> incididunt ut labore et dolore magna aliqua.</div>
                 </div>
+                    <div class="row">Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit, sed do eiusmod tempor<br> incididunt ut labore et dolore magna aliqua.</div>
                 <br>
                 <div class="row">
                     <h4>PROFESSIONAL EXPERIENCE</h4>
@@ -90,7 +90,7 @@
                 <br>
             </div>
 
-            <div class="col-8">
+            <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12">
                 <div class="row">
                     <h4>DEVELOPMENT PROJECTS</h4>
                 </div>
