--- a/html/dom-query-js.html
+++ b/html/dom-query-js.html
@@ -24,44 +24,95 @@
     pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
     culpa qui officia deserunt mollit anim id est laborum.
 </p>
+<div>
+    <button id="btn1">JavaScript is Cool!</button>
+    <button id="btn2">Hello Again --> Blue</button>
+    <button id="btn3">Orange List Items</button>
+    <button id="btn4">Blue List Item</button>
+    <button id="btn5">Mission Accomplished!</button>
+</div>
+
 
 <script>
+    // DOM EVENTS EXERCISES:
     (function() {
-        "use strict";
-        // TODO: Uncomment next line and get the main header element by id
-        var mainHeader = document.getElementById("main-header");
+    let listener = function (event) {
+        let mainHeader = document.getElementById("main-header");
+        mainHeader.innerHTML = "JavaScript is Cool!";
+    }
+    document.getElementById("btn1").addEventListener('click', listener);
 
-        // TODO: Set inner html of mainHeader to "JavaScript is Cool"
-        mainHeader.innerHTML = "JavaScript is Cool"
 
-        // TODO: Uncomment the next line and get the sub header element by id
-        var subHeader = document.getElementById("sub-header");
+    let listener1 = function (event) {
+        let subHeader = document.getElementById("sub-header");
+        subHeader.style.color = "blue";
+    }
+    document.getElementById("btn2").addEventListener('click', listener1);
 
-        // TODO: Set the text color of subHeader to blue
-        subHeader.style.color = "blue"; // can also be written as subHeader.style['color'] = "blue";
 
-        // TODO: Uncomment the next line and get all list items
-        var listItems = document.getElementsByTagName("li");
-        console.log(listItems);
-
-        // TODO: Set text color on every other list item to orange
-        for (var i = 0; i < listItems.length; i++) {
+    let listener2 = function (event) {
+        let listItems = document.getElementsByTagName("li");
+        for (let i = 0; i < listItems.length; i++) {
             if (i % 2 === 1) {
                 listItems[i].style.color = "orange";
             }
         }
+    }
+    document.getElementById("btn3").addEventListener('click', listener2);
 
-        // TODO: Set text color of li with dbid = 1 to blue
+
+    let listener3 = function (event) {
+        let listItems = document.getElementsByTagName("li");
         listItems[0].style.color = 'blue';
+    }
+    document.getElementById("btn4").addEventListener('click', listener3);
 
-        // TODO: Uncomment the next line and get all elements with class name sub-paragraph
-        var subParagraphs = document.getElementsByClassName("sub-paragraph");
-        console.log(subParagraphs);
 
-        // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
-        subParagraphs[0].innerText = "Mission Accomplished!"
-
+    let listener4 = function (event) {
+        let subParagraphs = document.getElementsByClassName("sub-paragraph");
+        subParagraphs[0].innerText = "Mission Accomplished!";
+    }
+        document.getElementById("btn5").addEventListener('click', listener4);
     })();
+
+    // DOCUMENT OBJECT MODEL (DOM) EXERCISES:
+    //
+    // (function() {
+    //     "use strict";
+    //     // TODO: Uncomment next line and get the main header element by id
+    //     var mainHeader = document.getElementById("main-header");
+    //
+    //     // TODO: Set inner html of mainHeader to "JavaScript is Cool"
+    //     mainHeader.innerHTML = "JavaScript is Cool"
+    //
+    //     // TODO: Uncomment the next line and get the sub header element by id
+    //     var subHeader = document.getElementById("sub-header");
+    //
+    //     // TODO: Set the text color of subHeader to blue
+    //     subHeader.style.color = "blue"; // can also be written as subHeader.style['color'] = "blue";
+    //
+    //     // TODO: Uncomment the next line and get all list items
+    //     var listItems = document.getElementsByTagName("li");
+    //     console.log(listItems);
+    //
+    //     // TODO: Set text color on every other list item to orange
+    //     for (var i = 0; i < listItems.length; i++) {
+    //         if (i % 2 === 1) {
+    //             listItems[i].style.color = "orange";
+    //         }
+    //     }
+    //
+    //     // TODO: Set text color of li with dbid = 1 to blue
+    //     listItems[0].style.color = 'blue';
+    //
+    //     // TODO: Uncomment the next line and get all elements with class name sub-paragraph
+    //     var subParagraphs = document.getElementsByClassName("sub-paragraph");
+    //     console.log(subParagraphs);
+    //
+    //     // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
+    //     subParagraphs[0].innerText = "Mission Accomplished!"
+    //
+    // })();
 </script>
 </body>
 </html>
