--- a/html/order-pizza.html
+++ b/html/order-pizza.html
@@ -43,7 +43,7 @@
 <div class="container-fluid">
 
     <div class="jumbotron jumbotron-fluid .d-sm-none .d-md-block">
-        <div class="container">
+        <div>
             <h1 class="display-4">Welcome to Pizza World!</h1>
         </div>
     </div>
