--- a/html/coffee-project.html
+++ b/html/coffee-project.html
@@ -1,3 +1,125 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>JS Coffee Project</title>-->
+<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">-->
+<!--    <link rel="stylesheet" href="/css/coffee-project.css">-->
+<!--</head>-->
+<!--<body>-->
+
+<!--<header>-->
+<!--    <div class="container">-->
+<!--        <div class="row">-->
+<!--            <div class="col-12">-->
+<!--                <h1 class="coffee-header">Coffee!</h1>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</header>-->
+
+<!--<hr>-->
+
+<!--<div class="container">-->
+<!--    <div class="row">-->
+<!--        <div class="col">-->
+<!--            <div id="1">-->
+<!--                <h1>Light City</h1>-->
+<!--                <p>Light</p>-->
+<!--            </div>-->
+<!--            <div id="2">-->
+<!--                <h1>Half City</h1>-->
+<!--                <p>Light</p>-->
+<!--            </div>-->
+<!--            <div id="3">-->
+<!--                <h1>Cinnamon</h1>-->
+<!--                <p>Light</p>-->
+<!--            </div>-->
+<!--            <div id="4">-->
+<!--                <h1>City</h1>-->
+<!--                <p>Medium</p>-->
+<!--            </div>-->
+<!--            <div id="5">-->
+<!--                <h1>American</h1>-->
+<!--                <p>Medium</p>-->
+<!--            </div>-->
+<!--            <div id="6">-->
+<!--                <h1>Breakfast</h1>-->
+<!--                <p>Medium</p>-->
+<!--            </div>-->
+<!--            <div id="7">-->
+<!--                <h1>High</h1>-->
+<!--                <p>Dark</p>-->
+<!--            </div>-->
+<!--        </div>-->
+
+<!--        <div class="col">-->
+<!--            <div id="8">-->
+<!--                <h1>Continental</h1>-->
+<!--                <p>Dark</p>-->
+<!--            </div>-->
+<!--            <div id="9">-->
+<!--                <h1>New Orleans</h1>-->
+<!--                <p>Dark</p>-->
+<!--            </div>-->
+<!--            <div id="10">-->
+<!--                <h1>European</h1>-->
+<!--                <p>Dark</p>-->
+<!--            </div>-->
+<!--            <div id="11">-->
+<!--                <h1>Espresso</h1>-->
+<!--                <p>Dark</p>-->
+<!--            </div>-->
+<!--            <div id="12">-->
+<!--                <h1>Viennese</h1>-->
+<!--                <p>Dark</p>-->
+<!--            </div>-->
+<!--            <div id="13">-->
+<!--                <h1>Italian</h1>-->
+<!--                <p>Dark</p>-->
+<!--            </div>-->
+<!--            <div id="14">-->
+<!--                <h1>French</h1>-->
+<!--                <p>Dark</p>-->
+<!--            </div>-->
+<!--        </div>-->
+
+<!--        <div class="col">-->
+<!--            <form class="coffee-roast-form">-->
+<!--                <label for="roast-selection">Roast:</label>-->
+<!--                <select id="roast-selection">-->
+<!--                    <option>light</option>-->
+<!--                    <option>medium</option>-->
+<!--                    <option>dark</option>-->
+<!--                </select>-->
+<!--                <div>-->
+<!--                    <label for="coffee-selection">Coffee:</label>-->
+<!--                    <input id="coffee-selection" type="text" name="coffee-selection" placeholder="Search for a Coffee">-->
+<!--                    <input id="submit" type="submit"/>-->
+<!--                </div>-->
+<!--            </form>-->
+<!--        </div>-->
+<!--</div>-->
+
+<!--    <table>-->
+<!--        <thead>-->
+<!--            <tr>-->
+<!--                <th>ID</th>-->
+<!--                <th>NAME</th>-->
+<!--                <th>ROAST</th>-->
+<!--            </tr>-->
+<!--        </thead>-->
+<!--        <tbody id="coffees"></tbody>-->
+<!--    </table>-->
+
+<!--<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>-->
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>-->
+<!--<script src="/js/coffee-project.js"></script>-->
+
+
+<!--</body>-->
+<!--</html>-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,97 +142,26 @@
 
 <hr>
 
+<form>
+    <label for="roast-selection"></label>
+    <select id="roast-selection">
+        <option>light</option>
+        <option>medium</option>
+        <option>dark</option>
+    </select>
+    <input id="submit" type="submit" />
+</form>
+
 <div class="container">
-    <div class="row">
-        <div class="col">
-            <div id="1">
-                <h1>Light City</h1>
-                <p>Light</p>
-            </div>
-            <div id="2">
-                <h1>Half City</h1>
-                <p>Light</p>
-            </div>
-            <div id="3">
-                <h1>Cinnamon</h1>
-                <p>Light</p>
-            </div>
-            <div id="4">
-                <h1>City</h1>
-                <p>Medium</p>
-            </div>
-            <div id="5">
-                <h1>American</h1>
-                <p>Medium</p>
-            </div>
-            <div id="6">
-                <h1>Breakfast</h1>
-                <p>Medium</p>
-            </div>
-            <div id="7">
-                <h1>High</h1>
-                <p>Dark</p>
+    <div class="col">
+        <div class="row">
+            <div id="coffees" class="coffee">
+                <h1>Coffee Name</h1>
+                <p>Coffee Roast</p>
             </div>
         </div>
-
-        <div class="col">
-            <div id="8">
-                <h1>Continental</h1>
-                <p>Dark</p>
-            </div>
-            <div id="9">
-                <h1>New Orleans</h1>
-                <p>Dark</p>
-            </div>
-            <div id="10">
-                <h1>European</h1>
-                <p>Dark</p>
-            </div>
-            <div id="11">
-                <h1>Espresso</h1>
-                <p>Dark</p>
-            </div>
-            <div id="12">
-                <h1>Viennese</h1>
-                <p>Dark</p>
-            </div>
-            <div id="13">
-                <h1>Italian</h1>
-                <p>Dark</p>
-            </div>
-            <div id="14">
-                <h1>French</h1>
-                <p>Dark</p>
-            </div>
-        </div>
-
-        <div class="col">
-            <form name="coffee" class="coffee-roast-form">
-                <label for="roast-selection">Roast:</label>
-                <select id="roast-selection">
-                    <option>light</option>
-                    <option>medium</option>
-                    <option>dark</option>
-                </select>
-                <div>
-                    <label for="coffee-selection">Coffee:</label>
-                    <input id="coffee-selection" type="text" name="coffee-selection" placeholder="Search for a Coffee">
-                    <input id="submit" type="submit"/>
-                </div>
-            </form>
-        </div>
+    </div>
 </div>
-
-<!--    <table>-->
-<!--        <thead>-->
-<!--            <tr>-->
-<!--                <th>ID</th>-->
-<!--                <th>NAME</th>-->
-<!--                <th>ROAST</th>-->
-<!--            </tr>-->
-<!--        </thead>-->
-<!--        <tbody id="coffees"></tbody>-->
-<!--    </table>-->
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
