--- a/html/coffee-project.html
+++ b/html/coffee-project.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <title>JS Coffee Project</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/coffee-project.css">
 </head>
 <body>
 
+<!--Header with Background Image and Text Here:-->
 <header>
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="display-4 text-center text-light">Coffee</h1>
+            <h1 class="display-4 text-center text-light">Grinders Café</h1>
             <p class="lead"></p>
         </div>
     </div>
 </header>
 
+<!--Main Body Div Code Here-->
+<!--Render Coffees JS Functions Code Below:-->
 <div class="container">
     <div class="row">
         <div class="col-8 text-center">
@@ -25,9 +28,10 @@
                 <p>Coffee Roast</p>
             </div>
         </div>
-
+        <!--Filter by Roast & Coffee Search Code Here:-->
         <div class="col-4 text-center">
             <form>
+                <h1>Search for a Coffee:</h1>
                 <label for="roast-selection">Filter by Roast:</label>
                 <select id="roast-selection">
                     <option>All Roasts</option>
@@ -37,8 +41,22 @@
                 </select>
             </form>
             <form>
-                <label for="coffee-selection">Search for a Coffee:</label>
+                <label for="coffee-selection">Filter by Name:</label>
                 <input id="coffee-selection" name="coffee-selection" type="text">
+            </form>
+            <br>
+            <!--User Add a New Coffee HTML Code Here:-->
+            <form>
+                <h1>Add a Coffee:</h1>
+                <label for="new-roast-selection">New Roast:</label>
+                <select id="new-roast-selection">
+                    <option>Light</option>
+                    <option>Medium</option>
+                    <option>Dark</option>
+                </select>
+                <br>
+                <label for="new-coffee-selection">New Coffee Name:</label>
+                <input id="new-coffee-selection" name="new-coffee-selection" type="text">
             </form>
             <div>
                 <input class="btn btn-dark btn-block" id="submit" type="submit" />
@@ -49,6 +67,6 @@
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-<script src="main.js"></script>
+<script src="/js/coffee-project.js"></script>
 </body>
 </html>
