Completed JQuery Mouse Events Exercises.

--- a/html/jquery_exercises.html
+++ b/html/jquery_exercises.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>JQuery Introduction & Selectors</title>
+    <title>JQuery Introduction, Selectors, & Mouse Events</title>
 </head>
 <body>
 
 <div>
-    <h1>Military Bases I've Been Assigned to:</h1>
+    <h1 id="heading">Military Bases I've Been Assigned to</h1>
+    <p>In order from my first assignment to my last:</p>
     <ul>
         <li id="lackland" class="base">Lackland AFB</li>
         <li id="fort-sam" class="codeup">Fort Sam Houston JBSA</li>
