added css code to change page layout after konami code function is ran.

--- a/html/konami.html
+++ b/html/konami.html
@@ -4,7 +4,7 @@
     <title>Konami Code</title>
 </head>
 <body>
-<h1>Konami Code</h1>
+<h1 id="konami">Konami Code</h1>
 
 <script type="text/javascript" src="../js/jquery/jquery-2.2.4.js"></script>
 <script src="/js/jquery-konami-code.js"></script>
