--- a/html/coffee-project.html
+++ b/html/coffee-project.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>JS Coffee Project</title>
+    <!--Bootstrap Stylesheet CDN:-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!--Custom CSS Stylesheet:-->
     <link rel="stylesheet" href="/css/coffee-project.css">
 </head>
 <body>
@@ -93,8 +95,11 @@
     </div>
 </div>
 
+<!--JQuery CDN:-->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<!--Bootstrap Script CDN:-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<!--Custom JS Script:-->
 <script src="/js/coffee-project.js"></script>
 </body>
 </html>
