--- a/html/defuse-the-bom.html
+++ b/html/defuse-the-bom.html
@@ -18,7 +18,7 @@
 
     // TODO: This function needs to be called once every second
     setInterval(function updateTimer() {
-        if (detonationTimer == 0) {
+        if (detonationTimer === 0) {
             alert('EXTERMINATE!');
             document.body.innerHTML = '';
         } else if (detonationTimer > 0) {
@@ -31,7 +31,7 @@
     // TODO: When this function runs, it needs to
     // cancel the interval/timeout for updateTimer()
     function defuseTheBOM() {
-        clearTimeout(detonationTimer);
+        clearInterval(detonationTimer);
     }
 
     // Don't modify anything below this line!
