--- a/html/jquery_faq.html
+++ b/html/jquery_faq.html
@@ -2,11 +2,16 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>JQuery Attributes and CSS</title>
+    <title>JQuery Attributes and CSS/JQuery Traversing</title>
     <!--Bootstrap Style CDN:-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <!--Embedded Stylesheet:-->
     <style>
+
+        li {
+            list-style: none;
+        }
+
         hr {
             border: 2px solid darkslategray;
         }
@@ -21,7 +26,7 @@
 <div class="text-center">
     <h1>Frequently Asked Questions about National Parks:</h1>
 
-    <button id="answers" type="button" class="btn btn-info">Click to View Answers</button>
+    <button id="answers" type="button" class="btn btn-info">Click to View FAQ Answers</button>
     <br>
     <hr>
     <dl>
@@ -56,14 +61,45 @@
         <dd class="invisible">Most of the national parks in the United States are accessible by car, RV or bus. When you enter the park, you’ll need to pay an entrance fee, which is usually between $20-$40 per vehicle. Park passes can be valid for up to seven days depending on the park and season. If you plan to visit several national parks, we recommend you buy the <a href="https://www.nps.gov/planyourvisit/passes.htm" target="_blank">America the Beautiful Pass</a> for $80.</dd>
     </dl>
 
+    <h1>Facts about a few National Parks</h1>
+
+    <h3>Yosemite National Park:</h3>
+    <ul>
+        <li>Yosemite is famous for its giant sequoia trees.</li>
+        <li>Yosemite valley was formed by glaciers.</li>
+        <li>Yosemite falls is one of the tallest waterfalls in North America.</li>
+        <li class="last-li">The park is home to the rare Sierra Nevada Red Fox.</li>
+    </ul>
+
+    <h3>Yellowstone National Park:</h3>
+    <ul>
+        <li>Yellowstone encompasses 3,472 square miles.</li>
+        <li>Yellowstone is home to more than 500 active geysers.</li>
+        <li>Yellowstone is home to the largest concentration of mammals.</li>
+        <li class="last-li">285 species of birds can be found in yellowstone.</li>
+    </ul>
+
+    <h3>Glacier National Park:</h3>
+    <ul>
+        <li>It was named a National Park in 1910.</li>
+        <li>Goats are a symbol of the park.</li>
+        <li>The land that comprises the park previously belonged to the Blackfeet Indian Tribe.</li>
+        <li class="last-li">The park's nickname is the Crown of the Continent.</li>
+    </ul>
+
+    <div>
+        <button id="highlight-last-lis">Click here to highlight the last item in the lists.</button>
+    </div>
+    <br>
+
     <a href="https://visitusaparks.com/u-s-national-park-faqs/" target="_blank"><button type="button" class="btn btn-dark btn-lg">Click Here to Navigate to 'Visit USA Parks' Official Website</button></a>
 </div>
 <br>
 
-<!--Bootstrap Script CDN:-->
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <!--JQuery Script CDN:-->
 <script type="text/javascript" src="../js/jquery/jquery-2.2.4.js"></script>
+<!--Bootstrap Script CDN:-->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <!--Custom JS Here:-->
 <script type="text/javascript" src="../js/jquery-faq.js"></script>
 </body>
