Added comments in HTML.

--- a/html/jquery_faq.html
+++ b/html/jquery_faq.html
@@ -96,6 +96,8 @@
 </div>
 <br>
 
+<!--JQuery FIRST then BOOTSTRAP and then Custom JS Script always LAST-->
+
 <!--JQuery Script CDN:-->
 <script type="text/javascript" src="../js/jquery/jquery-2.2.4.js"></script>
 <!--Bootstrap Script CDN:-->
