Completed AJAX Blog - Requests and Responses Exercises.

--- a/html/ajax-store.html
+++ b/html/ajax-store.html
@@ -40,7 +40,7 @@
 
     var inventory = $.ajax("/data/inventory.json"); // GET request stored in a variable.
 
-    // Can also be written as var store = $.get("../data/inventory.json");
+    // Can also be written as var store = $.get("/data/inventory.json");
 
 
     // TODO: Take the data from inventory.json and append it to the products table
