--- a/html/ajax-blog.html
+++ b/html/ajax-blog.html
@@ -10,8 +10,16 @@
 </head>
 <body>
 
-<div id="posts">
 
+<h1 class="text-center">Blog <svg style="margin-bottom: 15px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-dots-fill" viewBox="0 0 16 16">
+    <path d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM5 8a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm4 0a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+</svg></h1>
+
+<div class="card text-center" id="posts">
+    <h3></h3>
+    <p></p>
+    <p></p>
+    <p></p>
 </div>
 
 <!--JQuery Script File/CDN:-->
@@ -19,6 +27,31 @@
 <!--Bootstrap Script CDN:-->
 <script rel="script" src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <!--Custom JS Script:-->
-<script></script>
+<script>
+    "use strict";
+
+    var blog = $.ajax("/data/blog.json"); // AJAX GET request stored in a variable
+    console.log(blog);
+
+    // Can also be written as var blog = $.get("/data/blog.json");
+
+    var contents = $('#posts');
+    blog.done(function(data, status) {
+        data.forEach(function(item) {
+            contents.append("<div>" +
+
+                "<h3>" + item.title + "</h3>" +
+                "<p>" + item.content + "</p>" +
+                "<p>" + "Categories: " + item.categories + "</p>" +
+                "<p>" + "Date: " + item.date + "</p>" +
+
+            "</div>")
+        });
+        console.log(data);
+        console.log(status);
+    });
+
+
+</script>
 </body>
 </html>
