--- a/html/mapbox_maps_api.html
+++ b/html/mapbox_maps_api.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Mapbox API</title>
+    <!-- Mapbox JS & CSS CDN Below -->
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js'></script>
     <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css'>
 </head>
 <body>
 
+<!-- The HTML element that serves as the Mapbox container -->
 <div id='map' style='width: 400px; height: 300px;'></div>
+
+<!-- Mapbox Geocoder Util Methods -->
+<script rel="script" src="/js/mapbox-geocoder-utils.js"></script>
+
+<!-- Custom JS Script -->
 <script>
     mapboxgl.accessToken = 'pk.eyJ1IjoiZGF2aWRzcHJpZXRvIiwiYSI6ImNsMnFsZGtrdjAyZ28zYm9lYzNvOHVrbWYifQ.MInwhhSP2EcHcCPHsc5xYg';
     const map = new mapboxgl.Map({
@@ -17,6 +24,8 @@
         center: [-74.5, 40], // starting position [lng, lat]
         zoom: 9 // starting zoom
     });
+
+
 </script>
 
 </body>
