--- a/html/weather_map.html
+++ b/html/weather_map.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Open Weather Map Project</title>
+    <!-- Mapbox JS & CSS CDN Below -->
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js'></script>
+    <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css'>
+
     <!--Bootstrap Stylesheet CDN:-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
     <!--Custom CSS Stylesheet-->
     <style rel="stylesheet" href="/css/weather-map-project.css"></style>
 </head>
@@ -14,11 +19,15 @@
 <div id='map' style='width: 400px; height: 300px;'></div>
 
 
+
 <!--JQuery Script CDN-->
 <script rel="script" src="/js/jquery/jquery-2.2.4.js"></script>
 
 <!--Bootstrap Script CDN:-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+<!-- Mapbox Geocoder Util Methods -->
+<script rel="script" src="/js/mapbox-geocoder-utils.js"></script>
 
 <!--JS Script for API Keys-->
 <script rel="script" src="/.gitignore/keys.js"></script>
