--- a/html/weather_map.html
+++ b/html/weather_map.html
@@ -16,8 +16,16 @@
 <body>
 
 <!-- The HTML element that serves as the Map container -->
-<div id='map' style='width: 400px; height: 300px;'></div>
-
+<!--<div id='map' style='width: 400px; height: 300px;'></div>-->
+<div class="text-center" id="weather">
+    <h1 id="location"></h1>
+    <p id="date"></p>
+    <p id="high-low"></p>
+    <p id="description"></p>
+    <p id="humidity"></p>
+    <p id="wind"></p>
+    <p id="pressure"></p>
+</div>
 
 
 <!--JQuery Script CDN-->
@@ -33,6 +41,6 @@
 <script rel="script" src="/.gitignore/keys.js"></script>
 
 <!--Custom JS Script-->
-<script rel="stylesheet" src="/js/weather-map-project.js"></script>
+<script rel="stylesheet" src="/js/weather_map.js"></script>
 </body>
 </html>
