--- a/html/weather_map.html
+++ b/html/weather_map.html
@@ -15,32 +15,84 @@
 </head>
 <body>
 
-<!-- The HTML element that serves as the Map container -->
-<!--<div id='map' style='width: 400px; height: 300px;'></div>-->
-<div class="text-center" id="weather">
-    <h1 id="location"></h1>
-    <p id="date"></p>
-    <p id="high-low"></p>
-    <p id="description"></p>
-    <p id="humidity"></p>
-    <p id="wind"></p>
-    <p id="pressure"></p>
+<!--Bootstrap Jumbotron Header-->
+<div class="jumbotron jumbotron-fluid" style="background-color: lightblue">
+    <div class="container">
+        <h1 class="display-4">5-Day Forecast<svg style="margin-bottom: 15px;" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-cloud-sun" viewBox="0 0 16 16">
+            <path d="M7 8a3.5 3.5 0 0 1 3.5 3.555.5.5 0 0 0 .624.492A1.503 1.503 0 0 1 13 13.5a1.5 1.5 0 0 1-1.5 1.5H3a2 2 0 1 1 .1-3.998.5.5 0 0 0 .51-.375A3.502 3.502 0 0 1 7 8zm4.473 3a4.5 4.5 0 0 0-8.72-.99A3 3 0 0 0 3 16h8.5a2.5 2.5 0 0 0 0-5h-.027z"/>
+            <path d="M10.5 1.5a.5.5 0 0 0-1 0v1a.5.5 0 0 0 1 0v-1zm3.743 1.964a.5.5 0 1 0-.707-.707l-.708.707a.5.5 0 0 0 .708.708l.707-.708zm-7.779-.707a.5.5 0 0 0-.707.707l.707.708a.5.5 0 1 0 .708-.708l-.708-.707zm1.734 3.374a2 2 0 1 1 3.296 2.198c.199.281.372.582.516.898a3 3 0 1 0-4.84-3.225c.352.011.696.055 1.028.129zm4.484 4.074c.6.215 1.125.59 1.522 1.072a.5.5 0 0 0 .039-.742l-.707-.707a.5.5 0 0 0-.854.377zM14.5 6.5a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1h-1z"/>
+        </svg></h1>
+        <p class="lead">Weather Application</p>
+    </div>
+</div>
+
+<!-- The Separate HTML Containers/Cards for the 5-day forecast: -->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-2 card text-center">
+            <h5 id="date0"></h5>
+            <p id="high-low0"></p>
+            <p id="description0"></p>
+            <p id="humidity0"></p>
+            <p id="wind0"></p>
+            <p id="pressure0"></p>
+        </div>
+        <hr>
+        <div class="col-2 card text-center">
+            <h5 id="date1"></h5>
+            <p id="high-low1"></p>
+            <p id="description1"></p>
+            <p id="humidity1"></p>
+            <p id="wind1"></p>
+            <p id="pressure1"></p>
+        </div>
+        <hr>
+        <div class="col-2 card text-center">
+            <h5 id="date2"></h5>
+            <p id="high-low2"></p>
+            <p id="description2"></p>
+            <p id="humidity2"></p>
+            <p id="wind2"></p>
+            <p id="pressure2"></p>
+        </div>
+        <hr>
+        <div class="col-2 card text-center">
+            <h5 id="date3"></h5>
+            <p id="high-low3"></p>
+            <p id="description3"></p>
+            <p id="humidity3"></p>
+            <p id="wind3"></p>
+            <p id="pressure3"></p>
+        </div>
+        <hr>
+        <div class="col-2 card text-center">
+            <h5 id="date4"></h5>
+            <p id="high-low4"></p>
+            <p id="description4"></p>
+            <p id="humidity4"></p>
+            <p id="wind4"></p>
+            <p id="pressure4"></p>
+        </div>
+    </div>
 </div>
 
 
-<!--JQuery Script CDN-->
+<!-- JQuery Script CDN: -->
 <script rel="script" src="/js/jquery/jquery-2.2.4.js"></script>
 
-<!--Bootstrap Script CDN:-->
+<!-- Bootstrap Script CDN: -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
-<!-- Mapbox Geocoder Util Methods -->
+<!-- Mapbox Geocoder Util Methods: -->
 <script rel="script" src="/js/mapbox-geocoder-utils.js"></script>
 
-<!--JS Script for API Keys-->
+<!--Day.js Script CDN: -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.2/dayjs.min.js"></script>
+
+<!-- JS Script for API Keys: -->
 <script rel="script" src="/.gitignore/keys.js"></script>
 
-<!--Custom JS Script-->
+<!-- Custom JS Script: -->
 <script rel="stylesheet" src="/js/weather_map.js"></script>
 </body>
 </html>
