--- a/html/weather_map.html
+++ b/html/weather_map.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <!--Custom CSS Stylesheet-->
-    <style rel="stylesheet" href="/css/weather-map-project.css"></style>
+    <link rel="stylesheet" href="/css/weather-map-project.css">
 </head>
 <body>
 
