Changed file names.

--- a/html/food-recipe-app.html
+++ b/html/food-recipe-app.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" initial-scale="1.0">
     <title>Find Meal For Your Ingredients</title>
-    <link rel="stylesheet" href="/css/food-app.css">
+    <link rel="stylesheet" href="/css/food-recipe-app.css">
     <!-- font-awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -44,6 +44,6 @@
 
 
 
-<script rel="script" src="/js/food-app.js"></script>
+<script rel="script" src="/js/food-recipe-app.js"></script>
 </body>
 </html>
