--- a/html/order-pizza.html
+++ b/html/order-pizza.html
@@ -179,10 +179,11 @@
         </div>
     </div>
 </div>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> <!-- Link for JQuery which activates user interaction for the build your own pizza tabs -->
+<!-- Link for JQuery which activates user interaction for the build your own pizza tabs -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!-- Bootstrap CDN -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-<!-- Your custom JS goes here -->
+<!-- Custom JS -->
 
 </body>
 </html>
