--- a/html/mapbox_maps_api.html
+++ b/html/mapbox_maps_api.html
@@ -71,7 +71,7 @@
         }
     ];
 
-    function restaurantMarkerAndPopup() {
+    function restaurantMarkerAndPopup(restaurants) {
         restaurants.forEach(function(restaurant) {
             geocode(restaurant.location, mapBoxKey).then(function(result) {
                 console.log(result);
