Refactored for menu links to function properly.

--- a/html/mapbox_maps_api.html
+++ b/html/mapbox_maps_api.html
@@ -10,7 +10,7 @@
 <body>
 
 <!-- The HTML element that serves as the Mapbox container -->
-<div id='map' style='width: 400px; height: 300px;'></div>
+<div id='map' style='width: 800px; height: 600px;'></div>
 
 <!-- Mapbox Geocoder Util Methods -->
 <script rel="script" src="/js/mapbox-geocoder-utils.js"></script>
@@ -55,19 +55,19 @@
             name: "Ramen Wasabi",
             location: "2101 N Milwaukee Ave, Chicago, IL 60647",
             foodType: "Japanese, Soups, Noodle Dishes",
-            menu: "<a href=\https://www.wasabichicago.com/menu-1\"><b>MENU</b></a>"
+            menu: "<a href=\https://www.wasabichicago.com/menu-1/><b>MENU</b></a>"
         },
         {
             name: "Jack & Ginger's",
             location: "2048 W Armitage Ave, Chicago, IL 60647",
             foodType: "American, Pub Grub",
-            menu: "<a href=\https://www.jackandgingers.com/menus/\"><b>MENU</b></a>",
+            menu: "<a href=\https://www.jackandgingers.com/menus/><b>MENU</b></a>",
         },
         {
             name: "Small Cheval",
             location: "1732 N Milwaukee Ave, Chicago, IL 60647",
             foodType: "American, Burgers",
-            menu: "<a href=\https://smallcheval.com/wicker-park/\"><b>MENU</b></a>",
+            menu: "<a href=\https://smallcheval.com/wicker-park/><b>MENU</b></a>",
         }
     ];
 
